2001-11-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (Magick): Invoke DestroyMagick() to clean up
 	ImageMagick allocations.

	* lib/Magick++/Include.h (ImageType): Added some missing enums to
	Magick namespace.

2001-11-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/CoderInfo.h (CoderInfo): Syntax fix.
	ImageMagick bug #975.

	* lib/Image.cpp (draw): Delete ostrstream data when it is no
 	longer needed.  ImageMagick bug #988.

2001-11-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (pixelColor): Implementation didn't handle pixels
	indexes correctly.  Now it does.

2001-11-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (matteFloodfill): Coordinates are long values.
	(floodFillOpacity): New method to floodfill opacity across pixels
	matching color (within fuzz-factor) at point. Similar to
	matteFloodfill except that color is selected from starting point.

2001-10-29  Bob Friesenhahn  <bfriesen@sun1107.ssd.usa.alcatel.com>

	* lib/Image.cpp (strokeDashArray): Change to type double.
	(strokeDashOffset): Change to type double.

2001-10-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Geometry.cpp (Geometry): Add constructor from
 	MagickLib::RectangleInfo.

	* lib/Image.cpp (boundingBox): Method to return smallest bounding
 	box enclosing non-border pixels.

2001-10-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (getConstIndexes): Add method to obtain read-only
 	pixel indexes.
	(getIndexes): Add method to obtain read-write pixel indexes.
	(Image::Image): Send warnings from Image constructor to cerr
 	rather than throwing.

	* lib/Color.cpp (Color(PixelPacket&)): Change argument to const
 	PixelPacket& as it should have been from the beginning.

	* lib/Image.cpp (pixelColor): Reimplemented to be a const method.

2001-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (getConstPixels): New method for returning a