@@ -1,6 +1,6 @@
 // This may look like C code, but it is really -*- C++ -*-
 //
-// Copyright Bob Friesenhahn, 1999, 2000
+// Copyright Bob Friesenhahn, 2001
 //
 // TypeMetric implementation
 //
@@ -21,44 +21,33 @@ Magick::TypeMetric::~TypeMetric ( void )
   // Nothing to do
 }
 
-// Character width, expressed in integer pixels
-unsigned int Magick::TypeMetric::characterWidth ( void )
-{
-  return _typeMetric.width;
-}
 
-// Character height, expressed in integer pixels
-unsigned int Magick::TypeMetric::characterHeight ( void )
-{
-  return _typeMetric.height;
-}
-
-// Ascent, expressed in 26.6 fixed point pixels
-int Magick::TypeMetric::ascent ( void )
+// Ascent, expressed in pixels
+double Magick::TypeMetric::ascent ( void )
 {
   return _typeMetric.ascent;
 }
 
-// Descent, expressed in 26.6 fixed point pixels
-int Magick::TypeMetric::decent ( void )
+// Descent, expressed in pixels
+double Magick::TypeMetric::decent ( void )
 {
   return _typeMetric.descent;
 }
 
-// Text width, expressed in 26.6 fixed point pixels
-unsigned int Magick::TypeMetric::textWidth ( void )
+// Text width, expressed in pixels
+double Magick::TypeMetric::textWidth ( void )
 {
   return _typeMetric.width;
 }
 
-// Text height, expressed in 26.6 fixed point pixels
-unsigned int Magick::TypeMetric::textHeight ( void )
+// Text height, expressed in pixels
+double Magick::TypeMetric::textHeight ( void )
 {
   return _typeMetric.height;
 }
 
-// Maximum horizontal advance, expressed in 26.6 fixed point pixels
-unsigned int Magick::TypeMetric::maxHorizontalAdvance ( void )
+// Maximum horizontal advance, expressed in pixels
+double Magick::TypeMetric::maxHorizontalAdvance ( void )
 {
   return _typeMetric.max_advance;
 }
